Finish download buttons

--- a/index.html
+++ b/index.html
@@ -57,9 +57,23 @@
 		<section id="getting-started" class="blue">
 			<div class="content">
 				<h2 class="margin-40">Usage</h2>
-				<div>Download <strong>flip_cover.css</strong> and <strong>flip_cover.js</strong> and move them in your project assets.</div>
+				<div>Download <strong>flip_cover.css</strong> and <strong>flip_cover.js</strong> and move them in your project assets.
+        </div>
+
         <p>
           <br><br>
+          <a href="#" class="download-button" download="flip_cover.js" target="_blank">Download JS</a>
+          <a href="#" class="download-button" download="flip_cover.css" target="_blank">Download CSS</a>
+        </p>
+
+      </div>
+    </section>
+
+    <section class="white examples">
+      <div class="content">
+        <h2 class="margin-40">Examples</h2>
+
+        <p>
           <h4>Basic Example</h4>
         </p>
 
