Link scss file instead od css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>
           <br><br>
           <a href="#" class="download-button" download="flip_cover.js" target="_blank">Download JS</a>
-          <a href="#" class="download-button" download="flip_cover.css" target="_blank">Download CSS</a>
+          <a href="#" class="download-button" download="flip_cover.scss" target="_blank">Download SCSS</a>
         </p>
 
       </div>
