--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<section id="getting-started" class="blue">
 			<div class="content">
 				<h2 class="margin-40">Usage</h2>
-				<div>Download <strong>flip_cover.css</strong> and <strong>flip_cover.js</strong> and move them in your project assets.
+				<div>Download <strong>flip_cover.scss</strong> and <strong>flip_cover.js</strong> and move them in your project assets.
         </div>
 
         <p>
