Add mailto link to email address

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
           });
 
           flipCover("email", {
+						url: "mailto:vvveleva@gmail.com",
             text: "vvveleva @gmail",
             width: "80px",
             height: "50px"
