Link to compose email in gmail

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="flip-cover-dribbble"></div>
           <div class="flip-cover-twiter"></div>
           <div class="flip-cover-linkedin"></div>
-          <div class="flip-cover-email"></div>
+          <div class="flip-cover-email" onclick="window.open('https://mail.google.com/mail/?view=cm&amp;tf=1&amp;to=vvveleva@gmail.com&amp;cc=&amp;bcc=&amp;su=&amp;body=','_blank');return false;"></div>
         </div>
         <br>
         <br>
