Add email link with icon in navbar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
               <span>usage</span>
             </a>
           </a></li>
+
+					<li><a href="examples">
+          <a href="mailto:vvveleva@gmail.com" onclick="window.open('https://mail.google.com/mail/?view=cm&amp;tf=1&amp;to=vvveleva@gmail.com&amp;cc=&amp;bcc=&amp;su=&amp;body=','_blank');return false;" class="nav-email">
+            <img src="email.png" width="32" height="32">
+            <span>vvveleva@gmail.com</span>
+          </a>
+        </a></li>
+
 					<li>
             <a href="https://github.com/vveleva/flipCover" target="_blank" class="github">
               <img src="./octocat-white-64.png" width="32" height="32" alt="GitHub">
