--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 					<li><a href="examples">
           <a href="mailto:vvveleva@gmail.com" onclick="window.open('https://mail.google.com/mail/?view=cm&amp;tf=1&amp;to=vvveleva@gmail.com&amp;cc=&amp;bcc=&amp;su=&amp;body=','_blank');return false;" class="nav-email">
-            <img src="email.png" width="32" height="32">
+            <img src="email-32.png" width="32" height="32">
             <span>vvveleva@gmail.com</span>
           </a>
         </a></li>
